Fri Mar 13 23:03:40 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/init.c (wait_connectable0): remove unreachable code.

Fri Mar 13 23:00:02 2009  Tanaka Akira  <akr@fsij.org>

	* configure.in (RUBY_CHECK_SIZEOF): pass [include] to AC_CHECK_SIZEOF.

Fri Mar 13 20:58:11 2009  Tanaka Akira  <akr@fsij.org>

	* dln.c (dln_find_1): compare fspace in size_t world.

Fri Mar 13 18:58:04 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (CFLAGS, CXXFLAGS): moved after warnflags.

Fri Mar 13 18:10:06 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (rb_throw_obj): inverted call flow.  [ruby-core:22872]

Fri Mar 13 17:04:09 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (bool): not define to get rid of conflic
	  against curses.

Fri Mar 13 16:45:33 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/openssl/openssl_missing.h (i2d_of_void): cast for callbacks.
	  [ruby-core:22860]

	* ext/openssl/ossl_engine.c (ossl_engine_s_by_id): suppress a
	  warning.

	* ext/openssl/ossl_ssl.c (ossl_sslctx_flush_sessions): time_t may
	  be larger than long.

	* ext/openssl/ossl_ssl_session.c (ossl_ssl_session_get_time),
	  (ossl_ssl_session_get_timeout): use TIMET2NUM() to conver
	  time_t.

Fri Mar 13 15:10:43 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/openssl/ossl_x509ext.c (ossl_x509ext_set_value): should use
	  OPENSSL_free instead of free.  a patch from Charlie Savage a
	  [ruby-core:22858].

Fri Mar 13 10:42:19 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (AC_HEADER_STDBOOL): added.

	* include/ruby/ruby.h (NUM2INT, rb_special_const_p): returns true
	  and false instead of Qtrue and Qfalse for platforms where VALUE
	  is bigger than int.

	* gc.c (gc_stress_set), ext/openssl/ossl_asn1.c (decode_bool): go
	  rid of variables named `bool'.

Fri Mar 13 10:16:36 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (struct stat.st_size): may be huge.
